# coding

./: .gitignore  Readme.md
python_programming/: common_leet_code.py
python_programming/pydantic/: base_model.ipynb
python_programming/python_programming/: pyproject.toml
