[tool.poetry]
name = "python-programming"
version = "0.1.0"
description = ""
authors = ["ramyagirish <girish.sureshkumar@gmail.com>"]
readme = "README.md"
packages = [{include = "python_programming"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scipy = "^1.14.0"
pytest = "^8.3.2"
pydantic = "^2.8.2"
jupyter = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
